--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trellis-shares",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A Trellis microservice to handle sharing documents based on jobs",
   "main": "index.mjs",
   "type": "module",
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@oada/client": "^1.0.1",
-    "@oada/jobs": "github:oada/jobs",
+    "@oada/jobs": "^0.1.8",
     "@trellisfw/signatures": "^2.1.3",
     "bluebird": "^3.7.2",
     "debug": "^4.1.1",
