--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trellisfw/signatures": "^2.1.3",
     "bluebird": "^3.7.2",
     "debug": "^4.1.1",
+    "email-addresses": "^3.1.0",
     "flat": "^5.0.0",
     "json-pointer": "^0.6.0",
     "lodash": "^4.17.15",
