--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
   "dependencies": {
     "@oada/client": "^1.0.4",
     "@oada/jobs": "^1.0.4",
+    "@overleaf/o-error": "^3.0.0",
+    "@trellisfw/masklink": "^1.0.5",
     "@trellisfw/signatures": "^2.1.3",
+    "axios": "^0.20.0",
     "bluebird": "^3.7.2",
     "debug": "^4.1.1",
     "email-addresses": "^3.1.0",
     "flat": "^5.0.0",
     "json-pointer": "^0.6.0",
+    "ksuid": "^2.0.0",
     "lodash": "^4.17.15",
     "nconf": "^0.10.0",
-    "uuid": "^8.0.0"
+    "pdfjs": "^2.4.1",
+    "querystring": "^0.2.0",
+    "uuid": "^8.0.0",
+    "wrap-ansi": "^7.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.2",
-    "moment": "^2.25.3"
+    "moment": "^2.27.0"
   }
 }
