--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "trellis-shares",
   "version": "0.2.0",
   "description": "A Trellis microservice to handle sharing documents based on jobs",
-  "main": "index.mjs",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node index.mjs",
-    "test": "DEBUG=\"trellis-shares*,${DEBUG}\" mocha"
+    "start": "node --enable-source-maps dist/index.js",
+    "build": "tsc -b",
+    "test": "mocha"
   },
   "repository": "https://github.com/trellisfw/trellis-shares",
   "author": "Andrew Balmos <andrew@qlever.io>",
@@ -20,7 +20,11 @@
     "@trellisfw/signatures": "^2.1.3",
     "axios": "^0.20.0",
     "bluebird": "^3.7.2",
+    "convict": "^5.2.1",
+    "convict-format-with-moment": "^6.2.0",
+    "convict-format-with-validator": "^6.2.0",
     "debug": "^4.1.1",
+    "dotenv": "^10.0.0",
     "email-addresses": "^3.1.0",
     "flat": "^5.0.0",
     "json-pointer": "^0.6.0",
@@ -29,13 +33,31 @@
     "nconf": "^0.10.0",
     "pdfjs": "^2.4.1",
     "querystring": "^0.2.0",
+    "tslib": "^2.3.1",
     "uuid": "^8.0.0",
     "wrap-ansi": "^7.0.0"
   },
   "devDependencies": {
+    "@oada/types": "^1.5.1",
+    "@tsconfig/node16": "^1.0.2",
+    "@types/bluebird": "^3.5.36",
+    "@types/convict": "^5",
+    "@types/convict-format-with-validator": "^6.0.2",
+    "@types/debug": "^4.1.7",
+    "@types/flat": "^5.0.2",
+    "@types/json-pointer": "^1.0.31",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^16.6.1",
+    "@types/prettier": "^2",
+    "@types/uuid": "^8.3.1",
+    "@types/wrap-ansi": "^8.0.1",
+    "@yarnpkg/sdks": "^2.4.1-rc.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.1.2",
-    "moment": "^2.27.0"
-  }
+    "moment": "^2.27.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
+  },
+  "packageManager": "yarn@3.0.1"
 }
