--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   "license": "None",
   "private": true,
   "dependencies": {
-    "@oada/client": "^2.6.1",
-    "@oada/jobs": "^2.0.4",
+    "@oada/client": "^2.6.4",
+    "@oada/jobs": "^2.0.9",
     "@overleaf/o-error": "^3.3.1",
     "@trellisfw/masklink": "^1.0.6",
     "@trellisfw/signatures": "^2.1.3",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "bluebird": "^3.7.2",
-    "convict": "^5.2.1",
+    "convict": "^6.2.1",
     "convict-format-with-moment": "^6.2.0",
     "convict-format-with-validator": "^6.2.0",
-    "debug": "^4.3.2",
+    "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "email-addresses": "^4.0.0",
     "flat": "^5.0.2",
     "json-pointer": "^0.6.1",
     "ksuid": "^2.0.0",
     "lodash": "^4.17.21",
-    "pdfjs": "^2.4.5",
+    "pdfjs": "^2.4.7",
     "querystring": "^0.2.1",
     "tslib": "^2.3.1",
     "uuid": "^8.3.2",
     "wrap-ansi": "^7.0.0"
   },
   "devDependencies": {
-    "@oada/types": "^1.5.1",
+    "@oada/types": "^1.7.0",
     "@tsconfig/node16": "^1.0.2",
     "@types/bluebird": "^3.5.36",
     "@types/convict": "^6.1.1",
@@ -45,18 +45,44 @@
     "@types/debug": "^4.1.7",
     "@types/flat": "^5.0.2",
     "@types/json-pointer": "^1.0.31",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^16.6.1",
-    "@types/prettier": "^2.3.2",
-    "@types/uuid": "^8.3.1",
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^16.11.11",
+    "@types/prettier": "^2.4.2",
+    "@types/uuid": "^8.3.3",
     "@types/wrap-ansi": "^8.0.1",
-    "@yarnpkg/sdks": "^2.4.1-rc.4",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "@yarnpkg/sdks": "^2.5.1-rc.4",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^9.0.3",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-xo": "^0.39.0",
+    "eslint-config-xo-typescript": "^0.47.1",
+    "eslint-formatter-pretty": "^4.1.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-github": "^4.3.5",
+    "eslint-plugin-i18n-text": "^1.0.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-no-constructor-bind": "^2.0.4",
+    "eslint-plugin-no-only-tests": "^2.6.0",
+    "eslint-plugin-no-secrets": "^0.8.9",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-notice": "^0.9.10",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-regexp": "^1.5.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.11.0",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "mocha": "^9.1.3",
     "moment": "^2.29.1",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.0",
     "typescript": "^4.3.5"
   },
-  "packageManager": "yarn@3.0.1"
+  "packageManager": "yarn@3.1.1"
 }
