--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,24 @@
 {
   "extends": "@tsconfig/node16",
   "compilerOptions": {
+    "composite": true,
+    "module": "node16",
+    "moduleResolution": "node16",
     "removeComments": true,
+    "stripInternal": true,
     "importHelpers": true,
+    "alwaysStrict": true,
     "strict": true,
-    "importsNotUsedAsValues": "error",
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noErrorTruncation": true,
     "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
     "outDir": "dist"
   },
